--- a/views/yasam-hatti.html
+++ b/views/yasam-hatti.html
@@ -2,32 +2,298 @@
 	<h1>Yaşam Hattı ( Life Line )</h1>
 	<p>Dikey Çözümler olarak riskli çalışma alanlarında yaşam hattı kurulum, bakım ve onarım hizmetleri ile birlikte bu sistemler için danışmanlık ve ilgili personel için eğitim hizmetleri vermekteyiz.</p>
 	<p>Özellikle fabrika ve imalathaneler,endüstriyel tesisler,stad,baca ve kulelerde kullanılmakta olan uzun yılar süren tecrübe ve birikimin eseri standart bir uygulamadır. Özel ve emniyetli dizaynı sayesinde ilgili standartlarda uygun sertifikalı kalıcı düşüş durdurucu sistemlerdir. Her türlü projeye ve uygulama alanına tecrübeli İple erişim teknisyenlerimiz sayesinde projelendirme ve uygulama yapabilmekteyiz. Erişimi en güç ve sorunlu bölgelere dahi en ekonomik ve verimli çözümler üretmekteyiz.</p>
-	<ul>
-		<li class="btn btn-primary">Yatay Yaşam Hatları</li>
-		<li class="btn btn-primary">Dikey Yaşam Hatları</li>
-		<li class="btn btn-primary">Raylı Sistemler</li>
-		<li class="btn btn-primary">Mobil Sistemler</li>
-		<li class="btn btn-primary">Düşüş Durdurucular + Ankraj Noktaları</li>
-	</ul>
+	
 
-	<h2>Yatay Yaşam Hatları</h2>
-	<p>Şu sayfayı kopya: http://www.yuksekisler.com/index.php/hizmetlerimiz/yasam-hatlari-lifeline/yatay-yasam-hatlari-lifeline<br>
-	C:\[WORK]\dikeycozumler\material\YAŞAM HATTI - LİFE LİNE SYSTEMS\Dosya 3/Clickfix 795A_2184-1-4</p>
+	<div class="row tab-system" ng-init="chooseTab='yatay'">
+		<div class="col-md-12 navig">
+			<div class="row">
+				<div class="col-xs-2">
+					<a class="btn btn-default btn-block" ng-class="{'selected':chooseTab=='yatay'}" ng-click="chooseTab='yatay'"><img src="/assets/img/yasam-hatti-yatay.png" class="img-responsive"><br>Yatay<br>Yaşam Hatları</a>
+				</div>
+				<div class="col-xs-2">
+					<a class="btn btn-default btn-block" ng-class="{'selected':chooseTab=='dikey'}" ng-click="chooseTab='dikey'"><img src="/assets/img/yasam-hatti-dikey.png" class="img-responsive"><br>Dikey<br>Yaşam Hatları</a>
+				</div>
+				<div class="col-xs-2">
+					<a class="btn btn-default btn-block" ng-class="{'selected':chooseTab=='rayli'}" ng-click="chooseTab='rayli'"><img src="/assets/img/yasam-hatti-rayli.png" class="img-responsive"><br>Raylı<br>Sistemler</a>
+				</div>
+				<div class="col-xs-2">
+					<a class="btn btn-default btn-block" ng-class="{'selected':chooseTab=='mobil'}" ng-click="chooseTab='mobil'"><img src="/assets/img/yasam-hatti-mobil.png" class="img-responsive"><br>Mobil<br>Sistemler</a>
+				</div>
+				<div class="col-xs-2">
+					<a class="btn btn-default btn-block" ng-class="{'selected':chooseTab=='dusus'}" ng-click="chooseTab='dusus'"><img src="/assets/img/yasam-hatti-dusus-durdurucular.png" class="img-responsive"><br>Düşüş Durdurucular<br>+ Ankraj Noktaları</a>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-12">
+			<div ng-show="chooseTab=='yatay'">
+				<h2>YATAY YAŞAM HATLARI</h2>
+				<hr>
+				<p ng-hide="true">Şu sayfayı kopya: http://www.yuksekisler.com/index.php/hizmetlerimiz/yasam-hatlari-lifeline/yatay-yasam-hatlari-lifeline<br>
+				C:\[WORK]\dikeycozumler\material\YAŞAM HATTI - LİFE LİNE SYSTEMS\Dosya 3/Clickfix 795A_2184-1-4</p>
 
-	<h2>Dikey Yaşam Hatları</h2>
-	<p>Şu sayfayı kopya: http://www.yuksekisler.com/index.php/hizmetlerimiz/yasam-hatlari-lifeline/innotech-vert-dikey-yasam-hatlar<br>
-	C:\[WORK]\dikeycozumler\material\YAŞAM HATTI - LİFE LİNE SYSTEMS\Dosya 3/Saferail EN-795D</p>
+				<div class="row">
+					<div class="col-sm-4">
+						<img src="/assets/img/yasam-hatti-yatay-img.jpg" class="img-responsive">
+					</div>
+					<div class="col-sm-8">
+						<p>INNOTECH AIO (All in One) serisi yaşam hatları hemen her türlü durumda yüksekte çalışan personelin güvenliğini kesintisiz olarak sağlar. EN795-2012 standartlarına göre testleri yapılmıştır ve 10 yıl üretici firma garantisine sahiptir.</p>
 
-	<h2>Raylı Sistemler</h2>
-	<p>Şu sayfayı kopya: http://www.yuksekisler.com/index.php/hizmetlerimiz/yasam-hatlari-lifeline/innotech-taurus-ray-sistemli-yasam-hatlar<br>
-	C:\[WORK]\dikeycozumler\material\YAŞAM HATTI - LİFE LİNE SYSTEMS\Dosya 3/Saferail-Eyecatcher-horizontaal</p>
+						<p>Yaşam hattı bağlantısını çıkarmadan, hattın her iki tarafında da yürüme imkanı sağlar</p>
+						(4lü resim)
+						<ul>
+							<li>Çeşitli zemin tiplerine uygun çeşitli ankraj imkanı</li>
+							<li>Kolay muayene edilebilir yapıya sahiptir </li>
+							<li>Hat üzerinde sürekli bir ön gerilim olduğundan hat geriliminde ısı değişiminden dolayı gevşeme problemi yaşanmaz</li>
+							<li>Montajı özel el aletleri gerektirmez</li>
+							<li>Yıldırım koruma standardı olan EN 62305 (sınıf 1-4) uygun olarak test edilmiştir</li>
+							<li>EN 795 standardına uygun olarak test edilmiştir</li>
+							<li>10 yıl garantilidir</li>
+							<li>Tüm sistem elemanları paslanmaz çeliktir</li>
+						</ul>
+					</div>
+				</div>
 
-	<h2>Mobil Sistemler</h2>
-	<p>Şu sayfayı kopya: http://www.yuksekisler.com/index.php/hizmetlerimiz/yasam-hatlari-lifeline/innotech-temp-portatif-yasam-hatti-lifeline<br>
-	Resimler gelecek</p>
+				<h3>Şok Emiciler - AIO-ENDS-10</h3>
+				(şok emici resim)
 
-	<h2>Düşüş durdurucular + ankraj noktaları</h2>
-	<p>Yazı gelecek
-	C:\[WORK]\dikeycozumler\material\YAŞAM HATTI - LİFE LİNE SYSTEMS\Dosya 1\ankraj noktasi</p>
+				<p>INNOTECH yatay yaşam hatlarının tamamında hem başta hem sonda olmak üzere iki adet şok emici eleman kullanılır. Bu durum şok emiciye yakın durumlarda yaşanan düşüşlerde sisteme binen yükleri azalttığı gibi şok emicisiz sistemlerde yaşanabilecek kırılmaları engeller. İçerisindeki özel kamalı kilitleme sistemi, sistemde yaşanan bir düşüş sırasında çelik halatın yıpranmasını engeller. Sistemdeki ön gerilim üzerindeki indikatör sayesinde gözlemlenebilir. Presleme ve klemens gibi yöntemler kullanılmadan sonlandırma gerçekleştirilir. Paslanmaz çelikten üretilmiştir. EN795 standardına göre test edilmiştir. Her yaşam hattı sisteminde iki adet kullanılır.</p>
+
+				<h3>Ara Ankraj Noktaları - AIO SZH Serisi - (Sistem Ara Geçiş Elemanları)</h3>
+
+				(ikili resim)
+				 
+				<p>Innotech SZH-10 ve SZH-11 serisi ara ankraj noktaları her türlü yüzey üzerine kolaylıkla montajı yapılabilen ara geçiş elemanlarıdır. Tüm malzemeler paslanmaz çelikten üretilmiştir ve EN795 standartlarına uygun olarak test edilmiştir. 220 derece oynayabilen başlığı sayesinde yaşam hattının her iki tarafında da şaryo yönü değiştirilmeden güvenle kullanılabilir. Bir düşüş sırasında düşüş yönünde döndüğü için halata binen kesme yüklerini de en aza indirir.</p>
+
+
+				<h3>Sistem Sonlandırma Elemanları - AIO EB Serisi</h3>
+
+				(6lı resim)
+
+				<p>INNOTECH yaşam hatlarında şok emici elemanların bağlantı noktaları olarak görev yaparlar. Her türlü yüzey üzerine mekanik montaj ya da kimyasal dübelleme yöntemi ile yerleştirilebilirler. Presleme gerektirmeden mekanik montaj imkanı mümkündür. Tüm malzemeler paslanmaz çelikten üretilmiştir.</p>
+
+				<ul>
+					<li>EB-10/EB-15: STA, FALZ, VARIO, SAND, SYST komponentleri üzerine ve çelik konstrüksiyonlara monte edilebilir</li>
+					<li>EB-11: Beton yüzey cephe için </li>
+					<li>EB-12: Beton yüzey cephe için. 90° açılı montaj imkanı sağlar </li>
+					<li>EB-13: İki sonlandırma elemanını 90° açı ile sabitler</li>
+					<li>EB-14: İki sonlandırma elemanını yaşam hattı sisteminin orta noktasında sabitler, serbestçe döner</li>
+				</ul>
+
+
+				<h3>Köşe ve Viraj Elemanları - AIO EDLE Serisi</h3>
+
+				(6lı resim)
+
+
+				<p>Yaşam hattı üzerinde çeşitli virajları ve köşeleri dönmek için tasarlanmış özel elemanlardır. Kullanılan şaryo köşe noktalarını el sürmeden dönecek şekilde tasarlanmıştır. </p>
+
+				<ul>
+					<li>EDLE-10: 90° köşe dönme elemanı. Şaryo, köşe sistemi üzerinden geçebilir.</li>
+					<li>EDLE-11: kompleks viraj formları oluşturmak için kullanılır. Düşük açılı dönüşlerde kullanılabilir.</li>
+					<li>EDLE-12: İki ankraj noktası ile cephelerde bağlantı sağlar, içten ve üstten köşe birimi 90° üzerinden geçiş imkanı sağlar</li>
+					<li>EDLE-13: Bir ankraj noktası ile cephelerde bağlantı sağlar 90°</li>
+					<li>EDLE-19: 0° den max. 45° ye kadar değişken açı ayarı sağlar</li>
+					<li>EDLE-14: Yaşam hattına açı vermede kullanılan ara nokta. Şaryo bu ara noktayı geçemez!</li>
+				</ul>
+
+				<h3>Kenet Çatı Sistemleri - AIO SYST ve FALZ Serisi</h3>
+
+				(6lı resim)
+
+				<p>Çatı yüzeyine hasar vermeden, delik açmadan monte edilebilen özel kenet sistemleridir. Montajı kolay ve hızlıdır. Çatı üzerinde herhangi bir delik açmadan monte edilebildiği için izolasyon sorunu çıkartmaz. Alüminyum ve paslanmaz çelikten üretilmiştir. EN795 standartlarına göre test edilmiştir. Dünyadaki tüm kenet çatı üreticilerinin profillerine uygun kenet çözümleri mevcuttur.</p>
+
+				<p>AIO-SYST Serisi ankrajlar çeşitli şekillerdeki kenet çatılar için kullanıma uygun çözümlerdir. Kalzip, Bemo, Zambelli gibi çatı panel markalarına uygun çözümler mevcuttur.</p>
+
+				<p>AIO-FALZ kenet sistemleri bakır çatılar için kullanılır. Alüminyum kenetler bakır çatılar ile tepkimeye girip çatı ömrünü azalttığı için bu tür çatılarda paslanmaz çelik malzeme kullanılması gerekmektedir. Değişik kenet ölçülerine göre ayarlanıp montajı yapılabilir. </p>
+
+				<h3>Sandviç ve Trapez Panel Çatı Sistemleri - AIO SAND Serisi</h3>
+
+				(5li resim)
+
+				<p>AIO-SAND, sandviç panel çatılara yerleştirilen ankraj sistemlerini kapsayan ürün grubudur. Piyasada yaygın olarak bulunan tüm çatı sistemlerine kolaylıkla edilebilir modüler ankraj sistemlerine sahiptir. Montajlar çelik akıllı sac vidaları ya da perçin sistemleri ile monde edilirler. Paket içinden çıkan izolasyon elemanları sayesinde çatı üzerine ankrajlar yerleştirildikten sonra herhangi bir su sızdırma mümkün değildir.</p>
+
+				<ul>
+					<li>SAND-10: Çelik Sandviç ve trapez çatı sistemlerinde kullanılır. Sac kalınlığı en az 0,6mm olmalıdır</li>
+					<li>SAND-11: Çelik Sandviç ve trapez çatı sistemlerinde kullanılır. Sac kalınlığı en az 0,6mm olmalıdır</li>
+					<li>SAND-12: Alüminyum Sandviç ve trapez çatı sistemlerinde kullanılır. Sac kalınlığı en az 0,7mm olmalıdır</li>
+					<li>SYST-20: Çelik ve Alüminyum Trapez kaplama sistemlerde kullanılır. Sac kalınlığı en az 0,5mm olmalıdır</li>
+				</ul>
+
+
+
+				<h3>Beton Yüzey Ankraj Sistemleri - AIO STA Serisi</h3>
+
+				(4lü resim)
+
+				<p>Sıcak daldırma galvanize çelikten imal edilmiş ankraj ayaklarıdır. 400 kg'dan daha yüksek yüklerde esneyerek sisteme binen şokun azaltılmasına da yardımcı olur. Çelik konstrüksiyonlara da karşı plaka yardımı ile ilgili monte edilebilirler</p>
+				<ul>
+					<li>STA-10: Beton yüzeylere kimyasal ya da çelik dübel sistemleri ile monte edilirler</li>
+					<li>STA-11: Eğimli çatı yüzeyleri için üretilmiş açılı ankraj ayağı</li>
+					<li>STA-12: Boşluklu beton yüzeye uygulanabilecek geniş tablalı ankraj ayağı</li>
+					<li>STA-16: 90 Derece açılı monte edilebilen yan ankraj ayağı</li>
+				</ul>
+
+				<h3>Diğer Yüzeyler İçin Ankraj Sistemleri </h3>
+
+				(4lü resim)
+
+				<p>Ahşap, ters sandviç panel ve bunun gibi değişik yüzeylerde kullanıma uygun ankrajlama sistemleridir.</p>
+
+				<ul>
+					<li>STX-10: Ters sandviç panel ankrajı</li>
+					<li>BEF-206: Ahşap çatılarda mahya üzerine yerleştirmek için kullanılan ankraj noktası</li>
+					<li>BEF-303: SAND veya SYST serisinin kullanılamayacağı kadar ince ve hassas yüzeyler için ankraj</li>
+					<li>BEF-412: H Profil çelik profillere yerleştirilebilen portatif ankraj </li>
+				</ul>
+
+				<h3>Şaryolar - AIO GLEIT Serisi</h3>
+
+				(4lü resim)
+
+				<p>Yatay yaşam hattı sistemlerinde kullanılan bağlantı şaryo serisidir. Tüm ürünler paslanmaz çelik olarak üretilmiştir. Tüm şaryolar paslanmaz çelik otomatik kilitli karabina ile birlikte satılır.</p>
+
+				<ul>
+					<li>GLEIT-10: Tüm yatay yaşam hatlarında kullanılabilir. Sistemin herhangi bir yerinden takılabilir veya sökülebilir.</li>
+					<li>GLEIT-11: Baş üzeri sistemler için kullanıma uygun rulmanlı sabit şaryo</li>
+					<li>GLEIT-12: Viraj içeren baş üzeri sistemler için kullanıma uygun rulmanlı şaryo</li>
+					<li>GLEIT-13: Hat kurulumu sırasında yerleştirilen sabit şaryo. Hat üzerinden çıkartılamaz.</li>
+				</ul>
+			</div>
+			<div ng-show="chooseTab=='dikey'">
+				<h2>DİKEY YAŞAM HATLARI</h2>
+				<hr>
+				<p ng-hide="true">Şu sayfayı kopya: http://www.yuksekisler.com/index.php/hizmetlerimiz/yasam-hatlari-lifeline/innotech-vert-dikey-yasam-hatlar<br>
+				C:\[WORK]\dikeycozumler\material\YAŞAM HATTI - LİFE LİNE SYSTEMS\Dosya 3/Saferail EN-795D</p>
+
+				<div class="row">
+					<div class="col-sm-4">
+						<img src="/assets/img/yasam-hatti-dikey-img.jpg" class="img-responsive">
+					</div>
+					<div class="col-sm-8">
+						<p>INNOTECH Dikey Yaşam Hatları, her türlü dikey merdiven üzerine herhangi bir kaynak vs gibi zarar vermeden monte edilebilen güvenli sistemlerdir. EN353-1 standardına sahip INNOTECH Dikey Yaşam Hatları tamamen paslanmaz çelik malzemeden üretilmiştir.</p>
+						<ul>
+							<li>EN353-1 standartlarına sahiptir</li>
+							<li>Tamamen paslanmaz çelikten üretilmiştir</li>
+							<li>Sisteme entegre edilmiş paslanmaz şok emici eleman sayesinde düşüş durumunda sisteme etki eden yük azaltılır</li>
+							<li>Montaj için özel bir alete ihtiyaç duyulmaz</li>
+							<li>Merdivene kaynak, delme gibi yöntemler uygulanmadan monte edilir</li>
+							<li>Tüm Innotech yaşam hatları 10 Yıl garantilidir</li>
+						</ul>
+					</div>
+				</div>
+				
+
+				(4lü resim)
+
+				<h2>INNOTECH Dikey Yaşam Hatları Sistem Elemanları</h2>
+
+				<h3>Yedek Ankraj Noktası</h3>
+				<p>Merdiven basamaklarının taşıyıcılığı şüpheli olduğu durumlarda ikinci bir emniyet olarak görev yapar. Merdivenden bağımsız bir noktaya monte edilmelidir. Şok emicinin üst kısmına belli bir miktarda pay bırakılarak yerleştirilir. Kimyasal dübelleme ya da mekanik montaj şeklinde uygulanabilir.</p>
+
+				<h3>Üst Şok Emici</h3>
+				<p>Çelik halatın üst kısımda bağlı olduğu noktadır. Bir düşüş sırasında esneyerek sisteme ve teknisyene dinamik yüklerin binmesini engeller.</p>
+
+				<h3>Ara Ankraj Noktası</h3>
+				<p>10 metreden daha uzun merdivenlerde halatın sallanmasını engelleyen ara ankrajlardır. Basamak üzerine monte edilebilirler. 10-12 metrede bir kullanılması gerekir.</p>
+
+				<h3>Ön Gerdirmeli Alt Ankraj Noktası</h3>
+				<p>Sistemin en altına monte edilen ön gerdirme yayına sahip komponentdir. Tırmanış sırasında halatın esnemesine yardımcı olur. Aynı zamanda ısı değişimlerinden kaynaklanan halat uzama ve kısalması sonucu hattın gerilim değerini sabit tutar.</p>
+
+				<h3>Şaryo – Glider</h3>
+				<p>Dikey hat üzerinde teknisyenin güvenli bir şekilde tırmanmasını sağlayan düşüş durdurucudur. Herhangi bir düşüş durumunda kilitleyerek düşüşü durdururlar. EN-353-1 Standardına göre test edilmiştir.</p>
+
+				<h4>VERT-SET-50 Yeni Nesil Dikey Yaşam Hattı EN 353-1:2014</h4>
+				<p>EN353-1 test standardının en güncel versiyonuna sahip Dikey Yaşam Hattı sistemi. Ara noktalar klasik çıkartılabilir sistemlerden farklı olarak daha güvenli olan ara ankraj elemanları ile değiştirilmiştir. Özel şaryo tasarımı sayesinde ara noktalardan takılmadan rahatlıkla geçiş yapılabilir.</p>
+
+				(6lı resim)
+				<ul>
+					<li>Çatı erişim uzatma parçası sisteme dahildir</li>
+					<li>Parçalar paket içinde kuruluma hazırdır, rahatlıkla kurulabilir</li>
+					<li>Yeni nesil şaryo ara noktaları geçebilir</li>
+					<li>Diğer sistemlere göre %30 daha hızlı kurulum yapılabilir</li>
+					<li>EN 353-1:2014 standartlarına göre test edilmiştir.</li>
+				</ul>
+			</div>
+			<div ng-show="chooseTab=='rayli'">
+				<h2>RAYLI SİSTEMLER</h2>
+				<hr>
+				<p ng-hide="true">Şu sayfayı kopya: http://www.yuksekisler.com/index.php/hizmetlerimiz/yasam-hatlari-lifeline/innotech-taurus-ray-sistemli-yasam-hatlar<br>
+				C:\[WORK]\dikeycozumler\material\YAŞAM HATTI - LİFE LİNE SYSTEMS\Dosya 3/Saferail-Eyecatcher-horizontaal</p>
+
+				<div class="row">
+					<div class="col-sm-4">
+						<img src="/assets/img/yasam-hatti-rayli-img.jpg" class="img-responsive">
+					</div>
+					<div class="col-sm-8">
+						<p>INNOTECH TAURUS Raylı Yaşam Hattı Sistemleri her türlü düşme riski bulunan bölgelerde yatay, dikey ya da eğimli yüzeylerde kesintisiz güvenlik sağlayan yeni nesil yaşam hattı çözümleridir. Kolay kurulabilir yapıya sahiptir ve ciddi bir bakım gerektirmez. EN795 D standardına göre test edilmiştir. Sistem üzerinde aynı anda 4 kişiden daha fazla kişinin çalışacağı durumlarda, araç üzeri çalışma sistemlerinde veya düşüş mesafesinin sınırlı olacağı durumlar için ideal çözümlerdir.</p>
+					</div>
+				</div>
+
+				(Resim)
+
+				<ul>
+					<li>EN 353-1 ve EN 795 standartlarına sahiptir. Yatay ve dikey çözümlere göre test edilmiştir</li>
+					<li>6000 serisi alüminyum malzemeden üretildiği için hafif ve dayanıklıdır</li>
+					<li>Sistemde aynı anda çalışacak kişi sayısı sınırlı değildir. Her 10 metre mesafede 4 kişi çalışabilir</li>
+					<li>Şaryo sisteme bir kere takıldığında, kesintisiz bir şekilde yatay hattan dikey hatta geçiş yapılabilir</li>
+					<li>Pürüzsüz tasarım sayesinde sürtünmesiz bir şekilde çalışır</li>
+					<li>Projeye göre istenen açıda özel olarak üretilebilir</li>
+					<li>Tüm Innotech yaşam hatları 10 yıl garantiye sahiptir</li>
+				</ul>
+
+				<h3>TAURUS Ray Tipi Yaşam Hatları Sistem Elemanları</h3>
+
+				(5li resim)
+
+				<p>Innotech TAURUS Ray Tipi Yaşam Hatlarında bulunan bol çeşitli montaj elemanları ve ray tipleri sayesinde ilgili yapıda her türlü güvenlik çözümünü kesintisiz olarak sunmak mümkündür.</p>
+			</div>
+			<div ng-show="chooseTab=='mobil'">
+				<h2>MOBİL SİSTEMLER</h2>
+				<hr>
+				<p ng-hide="true">Şu sayfayı kopya: http://www.yuksekisler.com/index.php/hizmetlerimiz/yasam-hatlari-lifeline/innotech-temp-portatif-yasam-hatti-lifeline<br>
+				Resimler gelecek</p>
+
+				<h3>TEMP Portatif Yaşam Hatları</h3>
+				<p>INNOTECH TEMP serisi yaşam hatları, sabit kuruluma gerek olmayan yerlerde ve sürekli farklı ortamlarda çalışan teknisyenler tarafından tercih edilen portatif sistemlerdir. TEMP sistemi hızlı bir şekilde kurulup çalışma yapıldıktan kolaylıkla sökülebilir.</p>
+
+				(5li resim)
+				<ul>
+					<li>EN 795 standardına göre test edilmiştir</li>
+					<li>Sistemde aynı anda 4 kişi çalışabilir</li>
+					<li>Kurulum kolay ve hızlıdır</li>
+					<li>Max. 20 metrede bir yerleştirilecek ara ankrajlar sayesinde istenen uzunlukta hat kurulabilir</li>
+				</ul>
+
+				<h3>KIT Portatif Yaşam Hatları</h3>
+				<p>INNOTECH-LIFELINE KIT, endüstriyel çatılar ve giydirme kaplamalar gibi neredeyse tüm uygulamalar için uygundur.  Tüm INNOTECH Yaşam hatları elemanları ile beraber çalışabilir.</p>
+
+				(5li resim)
+
+				<ul>
+					<li>Projelendirme ile uygulama yapılan sistemlere göre daha ekonomiktir.</li>
+					<li>Kolay kurulum. (Kolay kontrol edilebilirlik)</li>
+					<li>Çift yönden geçilebilir sistem (Karabina geçebilir ara braketler.)</li>
+					<li>10 – 15 – 25 m’lik ölçülerde bulunabilir</li>
+					<li>EN795 standardına göre test edilmiştir.</li>
+					<li>Aynı anda 4 kişi çalışabilir.</li>
+				</ul>
+			</div>
+			<div ng-show="chooseTab=='dusus'">
+				<h2>Düşüş durdurucular + ankraj noktaları</h2>
+				<p>Yazı gelecek
+				C:\[WORK]\dikeycozumler\material\YAŞAM HATTI - LİFE LİNE SYSTEMS\Dosya 1\ankraj noktasi</p>
+			</div>
+		</div>
+	</div>
+
+	
+
+	
+
+	
+
+	
+
+	
 	
 </div>
